fix(80525472): adjust z-index of dropdown to be on top of everything

--- a/Project/Project/wwwroot/css/site.css
+++ b/Project/Project/wwwroot/css/site.css
@@ -690,7 +690,7 @@ html .swiper-button-next, html .swiper-button-prev {
 .dropdownMenu {
     display: none; /* Initially hidden */
     position: absolute;
-    z-index: 98;
+    z-index: 100;
     background-color: #212529;
     padding: 15px;
     width: 200px;
